<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory android:title="@string/advanced_pref">
<PreferenceScreen android:title="@string/pref_audio_advanced" android:key="key_audio_advanced">
    <CheckBoxPreference android:title="@string/pref_audio_fastoutputsetup" android:key="key_audio_fastoutputsetup" android:defaultValue="true"></CheckBoxPreference>
    <CheckBoxPreference android:title="@string/pref_audio_fastinputsetup" android:key="key_audio_fastinputsetup" android:defaultValue="false"></CheckBoxPreference>
</PreferenceScreen>

<PreferenceScreen android:title="@string/pref_videocodec_advanced" android:key="key_videocodec_advanced">
    <CheckBoxPreference android:title="@string/pref_videocodec_h264_hw_encoder" android:key="key_videocodec_h264_hw_encoder" android:defaultValue="false"></CheckBoxPreference>
    <CheckBoxPreference android:title="@string/pref_videocodec_h264_hw_decoder" android:key="key_videocodec_h264_hw_decoder" android:defaultValue="false"></CheckBoxPreference>
    <CheckBoxPreference android:title="@string/pref_video_disablecamera" android:key="key_video_disablecamera" android:defaultValue="false"></CheckBoxPreference>
</PreferenceScreen>
</PreferenceCategory> 
</PreferenceScreen>
